--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
-        "codeigniter4/codeigniter4": "dev-develop"
+        "codeigniter4/codeigniter4": "~v4.0.3",
+        "elasticsearch/elasticsearch": "~7.0",
+        "erusev/parsedown": "^1.7"
     },
     "require-dev": {
         "mikey179/vfsstream": "1.6.*",
